--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -19,8 +19,8 @@
 <body>
     <!-- PageLoaderLayer -->
     <div class="page-loader-layer" id="pageLoaderLayer">
-        <div class="page-loader-img">
-            <img src="/img/ingteresting.png" class="loader-img">
+        <div class="page-loader-spinner">
+            <svg viewBox="25 25 50 50"><circle cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"></circle></svg>
         </div>
         <div class="loading-text"></div>
     </div>
