--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -33,10 +33,6 @@
                 <div class="big-title">
                     <span class="project-name">書記</span><span class="version-info">Online</span>
                 </div>
-                <div class="head-actions">
-                    <span class="user-name"><i class="zmdi zmdi-account"></i><span class="user-name-text"></span></span>
-                    <span class="book-total"><i class="zmdi zmdi-mood"></i>战绩：<span class="book-total-text"></span></span>
-                </div>
             </div>
             
             <form class="main-login" onsubmit="return false;">
@@ -60,7 +56,7 @@
                     <span class="action-item" data-toggle="exit"><i class="zmdi zmdi-arrow-left"></i> 返回</span>
                     <span class="action-item" data-app-help="editor"><i class="zmdi zmdi-help"></i> 说明</span>
                     <span class="action-item" data-toggle="updateBooks"><i class="zmdi zmdi-refresh"></i> 更新</span>
-                    <span class="action-item" data-toggle="upload"><i class="zmdi zmdi-upload"></i> 上传</span>
+                    <span class="action-item" data-toggle="upload"><i class="zmdi zmdi-cloud-upload"></i> 上传 <span class="local-data-count">0</span></span>
                 </div>
             </div>
             <form class="editor-inserter" onsubmit="return false;">
